@@ -28,8 +28,8 @@ $supportedArguments[] = Array('niceName' => 'out', 'shortHelp' => 'output file t
 $supportedArguments[] = Array('niceName' => 'Location', 'shortHelp' => 'specify if you want to limit your query to a VSYS/DG. By default location=shared for Panorama, =vsys1 for PANOS. ie: location=any or location=vsys2,vsys1', 'argDesc' => 'sub1[,sub2]');
 $supportedArguments[] = Array(    'niceName' => 'DupAlgorithm',
                                                 'shortHelp' => "Specifies how to detect duplicates:\n".
-                                                    "  - SamePorts: objects with same Dst ports will be replaced by the one picked (default)\n".
-                                                    "  - SameDstSrcPorts: objects with same Dst and Src ports will be replaced by the one picked\n".
+                                                    "  - SameDstSrcPorts: objects with same Dst and Src ports will be replaced by the one picked (default)\n".
+                                                    "  - SamePorts: objects with same Dst ports will be replaced by the one picked\n".
                                                     "  - WhereUsed: objects used exactly in the same location will be merged into 1 single object and all ports covered by these objects will be aggregated\n",
                                                 'argDesc'=> 'SamePorts|WhereUsed');
 $supportedArguments[] = Array('niceName' => 'mergeCountLimit', 'shortHelp' => 'stop operations after X objects have been merged', 'argDesc'=> '100');
@@ -86,7 +86,7 @@ if( isset(PH::$args['dupalgorithm']) )
         display_error_usage_exit('unsupported value for dupAlgorithm: '.PH::$args['dupalgorithm']);
 }
 else
-    $dupAlg = 'sameports';
+    $dupAlg = 'samedststrcports';
 
 $location = PH::$args['location'];
 
